security: harden authentication and authorization
- JWT validation with HS256 secret from environment
- Rate limiting: 10 req/min auth, 100 req/min general (in-memory)
- HSTS enabled with max-age=31536000
- CSP with frame-ancestors 'none' for clickjacking prevention
- CORS configured with explicit allowed origins
- H2 console denied in production
- Security audit logging for authentication events
- Improved JWT error handling

Addresses findings from SECURITY_REVIEW.md